adapted BMatrix
* decendingIterator removed because it is not supported by gwt
* changed visibility of some operations
* fixed first row node map adaption operation